# amt-project

./: .gitignore  Experiment spreadsheet.xlsx  README.md  Self-assessment.docx  pyproject.toml  requirements.txt
configs/: preprocess.yaml  train.yaml
configs/audio/: cqt.yaml  mel.yaml  stft.yaml
configs/model/: cnn.yaml  crnn.yaml
notebooks/: 00_colab_setup_test.ipynb
scripts/: evaluate.py  evaluate_maps.py  evaluate_robustness.py  preprocess.py  train.py  tune.py
src/: evaluation.py  lightning_module.py  postprocess.py
src/data/: corruptions.py  datamodule.py  dataset.py  labels.py  transforms.py
src/models/: cnn.py  crnn.py
